--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   contain: strict;
   width: 1170px;
   height: 770px;
+  font-family: SFMono-Light;
+  font-size: 12px;
 }
 #screen pre {
   margin: 0;
@@ -37,12 +39,25 @@
   height: 15px;
 }
 span {
-  width: 7.8px;
-  height 15px;
+  display: inline-block;
+  height: 15px;
+  overflow: visible;
+  line-height: 15px;
+}
+#cursor {
+  display: block;
+  position: absolute;
+  height: 15px;
+  width: 7.201px;
+  border: 1px solid red;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 </style>
     <!-- <div id="root"></div> -->
     <div id="screen"></div>
+    <div id="cache"></div>
     <script>
 
       // ipcRenderer.send('nvim:init');
