Separate scrolls for windows

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,22 @@
       transform-origin: 0 0;
       transform: scale(0.5);
     }
+    .scrollContainer {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 50;
+      overflow: hidden;
+      border: 1px solid blue
+    }
+    .scroll {
+      transform-origin: 0 0;
+      transform: scale(0.5);
+      position: absolute;
+      top: 0;
+      left: 0;
+      border: 1px solid red;
+    }
   </style>
     <div id="screenContainer">
       <div id="cursor"></div>
