Fix screen shaking

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,14 +11,13 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
-    }
-    body {
-      background: #FFFFFF;
       margin: 0;
-      padding 0;
+      padding: 0;
     }
     #screen {
       position: absolute;
+      top: 0;
+      left: 0;
     }
     </style>
     <div id="screen">
