Horizontally center screen and fill borders with adjacent colors

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -18,6 +18,8 @@
       position: absolute;
       top: 0;
       left: 0;
+      display: flex;
+      justify-content: center;
     }
     </style>
     <div id="screen">
