--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>VV</title>
   </head>
   <body>
-  <style>
-    html, body {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      margin: 0;
-      padding: 0;
-    }
-    #screen {
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+      }
+      #screen {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
     </style>
-    <div id="screen">
-    </div>
+    <div id="screen"></div>
   </body>
 </html>
